Fixes #47 - Make content 100% height of available area
Height for content was 100% of window size, making it include the
height of the header, which caused a scrollbar to appear unnecessarily.
This update sets the background gradient on the homepage to absolute
positioning with each edge set to zero to expand to the available area.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -698,8 +698,12 @@ fade-out
 
 .home #main-content
 {
-    position:relative;
     min-height:100%;
+    position:absolute;
+    right:0;
+    left:0;
+    top:0;
+    bottom:0;
 }
 
 //=================================================================================
@@ -728,6 +732,7 @@ fade-out
 {
     min-width:664px;
     position:relative;
+    height:100%;
 }
 
 
@@ -771,7 +776,7 @@ fade-out
     top: 50%;
     left: 50%;
     margin-left: -322px;
-    margin-top: 100px; 
+    margin-top: -100px; 
     display: table;
     width:644px;
 }
